# elkcli

./: .gitignore  README.md  pyproject.toml  setup.py
elkcli/: __main__.py  globals_.py
elkcli/elk/: elastic.py
elkcli/parsers/: logParser.py  query_parser.py
elkcli/shell/: commands.py  elkPrompt.py
elkcli/utils/: compleater.py  keybindings.py  spinner.py  toolbar.py
src/elkcli/: constants.py  globals.py  main.py
src/elkcli/elk/: elastic.py
src/elkcli/parsers/: __init__.py  log_parser.py  query_parser.py
src/elkcli/shell/: __init__.py  commands.py  elk_prompt.py
src/elkcli/utils/: compleater.py  keybindings.py  spinner.py  toolbar.py
